# middleware-soccer

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  main.c  main.c.bak  metadata.txt  onevent.c  output.c  parser.c  possession.c  sequential.c  sequential.c.bak
design/: design.md  design.tex  diagramma.odg  document.aux  document.tex
doxygen/html/: annotated.html  classes.html  common_8h.html  common_8h__dep__incl.md5  common_8h__incl.md5  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.html  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b_dep.md5  (+16 more)
html/: common_8h_source.html  dir_000001_000000.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  formula.repository  globals.html  globals_enum.html  globals_func.html  globals_vars.html  index.html  main_8c__incl.md5  main_8c_source.html  menudata.js  output_8c__incl.md5  output_8c_source.html  output_8h__dep__incl.md5  parser_8c.html  parser_8c__incl.md5  parser_8c_source.html  parser_8h.html  parser_8h__dep__incl.md5  parser_8h_source.html  possession_8c.html  possession_8c__incl.md5  possession_8c_source.html  possession_8h.html  possession_8h__dep__incl.md5  possession_8h_source.html  structinterruption__event.html  structposition__event.html
include/: common.h  onevent.h  output.h  parser.h  possession.h
latex/: common_8h.tex  files.tex  main_8c__incl.md5  parser_8c.tex  parser_8h.tex  parser_8h__dep__incl.md5  possession_8h.tex  possession_8h__dep__incl.md5  refman.aux  refman.idx  refman.ilg  refman.ind  refman.toc  structinterruption__event.tex
source/: main.c  onevent.c  output.c  parser.c  possession.c
(+54 files in other folders)
